# CorefQA

./: .gitignore  colab-requirements.txt  pyproject.toml  requirements.txt
models/: mention_proposal.py
run/: build_dataset_to_tfrecord.py  run_corefqa.py  run_mention_proposal.py  run_squad.py
scripts/data/: generate_tfrecord_dataset.sh  preprocess_ontonotes_annfiles.sh  transform_ckpt_pytorch_to_tf.sh
scripts/models/: corefqa_tpu.sh  mention_gpu.sh  mention_tpu.sh  quoref_tpu.sh  squad_tpu.sh
