[tool.poetry]
name = "corefqa"
version = "0.1.0"
description = ""
authors = ["josubg <josubg@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
tensorboard = "~1.15"
tensorflow-estimator = "~1.15"
pyhocon = "^0.3.59"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
